# deno_graph

./: .clippy.toml  .gitignore  .rustfmt.toml  Cargo.toml  README.md  _build.ts  _build_npm.ts  deno.json  deno_graph_wasm.generated.js  deno_graph_wasm_bg.wasm  mod.ts  rust-toolchain.toml  test.ts  todo.txt  types.ts
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml  ecosystem.yml  release.yml
js/: README.md  deno.json  loader.ts  media_type.ts  mod.ts  test.ts  types.d.ts  types.ts
lib/: Cargo.toml  deno_graph.generated.js  deno_graph.js  deno_graph.wasm.js  deno_graph_bg.wasm  deno_graph_wasm.generated.js  deno_graph_wasm_bg.wasm  lib.rs  loader.ts  media_type.ts  types.d.ts  types.ts
lib/snippets/deno_graph-41279b1597c44b7e/src/: deno_apis.js
lib/snippets/deno_graph-cd1217a1b81b469d/src/: deno_apis.js
lib/snippets/deno_graph-e61ffb2567788327/src/: deno_apis.js
schemas/: module-graph.json
scripts/: build_npm.ts  update_deno_json_version.ts
src/: analysis.rs  analyzer.rs  ast.rs  checksum.rs  collections.rs  colors.rs  deno.rs  graph.rs  info.rs  js_graph.rs  jsr.rs  lib.rs  media_type.rs  module_specifier.rs  npm.rs  packages.rs  pragma.rs  rt.rs  source.rs  source_map.rs  swc_helpers.rs  text_encoding.rs
src/ast/: dep.rs  mod.rs
src/deno/: mod.rs
src/fast_check/: cache.rs  helpers.rs  mod.rs  range_finder.rs  swc_helpers.rs  transform.rs  transform_dts.rs  type_infer.rs
src/low_res/: mod.rs  range_finder.rs  swc_helpers.rs  transform.rs
src/semver/: mod.rs  npm.rs  specifier.rs
src/source/: file_system.rs  mod.rs  wasm.rs
src/symbols/: analyzer.rs  collections.rs  cross_module.rs  dep_analyzer.rs  helpers.rs  mod.rs  swc_helpers.rs
src/testdata/: import.wasm  import.wat
src/type_tracer/: analyzer.rs  collections.rs  cross_module.rs  mod.rs
tests/: ecosystem_test.rs  integration_test.rs  specs_test.rs  type_tracing_tests.rs
tests/ecosystem/: jsr_mirror.ts  jsr_versions.json
tests/helpers/: mod.rs  test_builder.rs
tests/specs/: README.md
tests/specs/graph/: DenoSpecifiers_ModuleGraphInfo.txt  DenoSpecifiers_ModuleGraphInfo_ModifiedCachedFiles.txt  DenoSpecifiers_NoModuleGraphInfo.txt  DenoSpecifiers_NoPath.txt  DenoSpecifiers_PackageNotExist.txt  DenoSpecifiers_SamePackageMultipleTimes.txt  DenoSpecifiers_VersionNotExist.txt  DenoSpecifiers_WorkspaceNotMatched.txt  DenoSpecifiers_Workspaces.txt  DynamicJsonIgnoresAssert.txt  JsrSpecifiers_Checksum_Mismatch.txt  JsrSpecifiers_Checksum_Unsupported.txt  JsrSpecifiers_FastCheck.txt  JsrSpecifiers_FastCheckCache_Basic.txt  JsrSpecifiers_FastCheckCache_Diagnostic.txt  JsrSpecifiers_FastCheckCache_DiagnosticMultipleExports.txt  JsrSpecifiers_FastCheckCache_DiagnosticThenNestedDep.txt  JsrSpecifiers_FastCheck_ClassCtors.txt  JsrSpecifiers_FastCheck_ClassGettersAndSetters.txt  JsrSpecifiers_FastCheck_ClassMemberRefAdditionalPropOnMember.txt  JsrSpecifiers_FastCheck_ClassMemberRefFound.txt  JsrSpecifiers_FastCheck_ClassMemberRefNotFound.txt  JsrSpecifiers_FastCheck_ClassProperties.txt  JsrSpecifiers_FastCheck_ClassPropertiesInfer.txt  JsrSpecifiers_FastCheck_ClassPropertiesLeavable.txt  JsrSpecifiers_FastCheck_ClassStaticMemberRefFound.txt  JsrSpecifiers_FastCheck_ClassStaticMemberRefNotFound.txt  JsrSpecifiers_FastCheck_ClassSuper.txt  JsrSpecifiers_FastCheck_ClassSuperUnsupported.txt  JsrSpecifiers_FastCheck_Comments.txt  JsrSpecifiers_FastCheck_ConstInfer.txt  JsrSpecifiers_FastCheck_CrossFileRefAliased.txt  JsrSpecifiers_FastCheck_CrossFileRefImportType.txt  JsrSpecifiers_FastCheck_CrossFileRefImportTypeQualified.txt  JsrSpecifiers_FastCheck_CrossFileRefModule.txt  JsrSpecifiers_FastCheck_CrossFileRefModuleNotFound.txt  JsrSpecifiers_FastCheck_DefaultExportExprLeavable.txt  JsrSpecifiers_FastCheck_DefaultExportExprVar.txt  JsrSpecifiers_FastCheck_Dts.txt  JsrSpecifiers_FastCheck_EntrypointJs.txt  (+87 more)
tests/specs/graph/bytes_and_text/: basic.txt  bytes_and_text_same_file.txt  bytes_import_then_regular_import.txt  css.txt  dynamic_bytes_then_dynamic_regular.txt  dynamic_bytes_then_static_regular.txt  jsr_checksum_mismatch.txt  not_enabled.txt  not_enabled_bytes.txt  not_enabled_css.txt  not_enabled_text.txt  not_exists.txt  redirect.txt
tests/specs/graph/checksums/: invalid.txt  jsr_pkg_fills.txt  jsr_pkg_invalid.txt  jsr_pkg_valid.txt  (+4 more)
tests/specs/symbols/: Basic.txt  ClassPrivateCtorParamProps.txt  Classes01.txt  DeclarationMerging01.txt  ExportAssignment01.txt  ExportDefault01.txt  ExportDefault02.txt  ExportDefault03.txt  ExportDefault04.txt  ExportDefaultLiteral01.txt  ExportDefaultLiteral02.txt  ExportDestructured.txt  ExportStar01.txt  ExportedDeclare01.txt  ExportedDeclare02.txt  FunctionOverloads01.txt  Functions01.txt  ImportEquals01.txt  ImportEquals02.txt  ImportType01.txt  ImportType02.txt  Interfaces01.txt  Interfaces02.txt  MemberExpr.txt  ModuleExportNameStr01.txt  Namespaces01.txt  Namespaces02.txt  NamespacesAmbient.txt  ReExportJson01.txt  ReexportAll.txt  ReexportDeep.txt  ReexportExport.txt  TsExternalModuleRef01.txt  TsExternalModuleRef02.txt  TsNamespaceExport01.txt  TsQualifiedName01.txt  TypeAlias01.txt  TypeScriptTypesHeader.txt  TypesEntrypoint.txt  UnresolvedParts.txt  (+37 more)
tests/specs/type_tracing/: Basic.txt  Classes.txt  Classes01.txt  DeclarationMerging01.txt  ExportAssignment01.txt  ExportDefault.txt  ExportDefault01.txt  ExportDefault02.txt  ExportDefault03.txt  ExportDefault04.txt  ExportDefaultLiteral01.txt  ExportDefaultLiteral02.txt  ExportDestructured.txt  ExportStar01.txt  ExportedDeclare01.txt  ExportedDeclare02.txt  FunctionOverloads01.txt  Functions01.txt  ImportEquals01.txt  ImportEquals02.txt  ImportType01.txt  ImportType02.txt  Interfaces01.txt  Interfaces02.txt  ModuleExportNameStr01.txt  Namespaces01.txt  Namespaces02.txt  ReExportJson01.txt  ReexportExport.txt  TsExternalModuleRef01.txt  TsExternalModuleRef02.txt  TsNamespaceExport01.txt  TsQualifiedName01.txt  TypeScriptTypesHeader.txt  TypesEntrypoint.txt
tests/testdata/: math_with_import.wasm
tests/type_tracing/: in_memory_loader.rs  mod.rs  test_builder.rs  tests.rs
(+7765 files in other folders)
