[package]
name = "deno_graph_wasm"
version = "0.0.0"
edition = "2021"
homepage = "https://deno.land/"
repository = "https://github.com/denoland/deno_graph"
documentation = "https://docs.rs/deno_graph"
authors = ["the Deno authors"]
license = "MIT"

[lib]
name = "deno_graph_wasm"
path = "lib.rs"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.43"
deno_graph = { path = "../" }
futures = "0.3.17"
js-sys = "0.3.55"
serde = { version = "1.0.130", features = ["derive", "rc"] }
serde_json = { version = "1.0.67", features = ["preserve_order"] }
serde-wasm-bindgen = "0.4.5"
wasm-bindgen = { version = "0.2.83", features = ["serde-serialize"] }
wasm-bindgen-futures = { version = "0.4.33" }

[dev-dependencies]
pretty_assertions = "1.0.0"

[profile.release]
codegen-units = 1
incremental = true
lto = true
opt-level = "z"
