[package]
name = "deno_graph_wasm"
version = "0.0.0"
edition = "2021"
homepage = "https://deno.land/"
repository = "https://github.com/denoland/deno_graph"
documentation = "https://docs.rs/deno_graph"
authors = ["the Deno authors"]
license = "MIT"

[lib]
name = "deno_graph_wasm"
path = "lib.rs"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.43"
deno_graph = { path = "../" }
futures = "0.3.17"
js-sys = "0.3.63"
serde = { version = "1.0.130", features = ["derive", "rc"] }
serde_json = { version = "1.0.67", features = ["preserve_order"] }
serde-wasm-bindgen = "0.5.0"
wasm-bindgen = { version = "=0.2.86", features = ["serde-serialize"] }
wasm-bindgen-futures = { version = "=0.4.36" }

[dev-dependencies]
pretty_assertions = "1.0.0"
