[package]
name = "deno_graph_wasm"
version = "0.0.0"
edition = "2021"
homepage = "https://deno.land/"
repository = "https://github.com/denoland/deno_graph"
documentation = "https://docs.rs/deno_graph"
authors = ["the Deno authors"]
license = "MIT"

[lib]
name = "deno_graph_wasm"
path = "lib.rs"
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.7"
deno_graph = { path = "../", default-features = false }
futures = "0.3.17"
js-sys = "0.3.68"
serde = { version = "1.0.130", features = ["derive", "rc"] }
serde_json = { version = "1.0.67", features = ["preserve_order"] }
serde-wasm-bindgen = "0.5.0"
sys_traits = { workspace = true, features = ["real", "wasm"] }
wasm-bindgen = { version = "=0.2.91" }
wasm-bindgen-futures = { version = "=0.4.41" }
thiserror.workspace = true
deno_error.workspace = true

[dev-dependencies]
pretty_assertions = "1.0.0"
